fix bug that the user div overlaps the button

--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -173,7 +173,7 @@ ul li p {
     height: 50px; 
     overflow: hidden;
     margin-bottom: 15px;
-    width: 500px;
+    width: 90px;
 }
 
 .sidenav-user-bg:hover {
